test/e2e/testdata/tracing-datadog-custom-service-name.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tracing-datadog-custom-service-name
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: tracing-datadog-custom-service-name
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: tracing-datadog-custom-service-name
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  logging:
    level:
      default: debug
  telemetry:
    tracing:
      provider:
        type: Datadog
        backendRefs:
          - name: otel-collector
            namespace: monitoring
            port: 8126
        serviceName: my-custom-service
      tags:
        "provider": "datadog"
        "k8s.cluster.name": "envoy-gateway"
        "k8s.pod.name": "%ENVIRONMENT(ENVOY_POD_NAME)%"
        "k8s.namespace.name": "%ENVIRONMENT(ENVOY_POD_NAMESPACE)%"
  shutdown:
    drainTimeout: 5s
    minDrainDuration: 1s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracing-datadog-custom-service-name
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tracing-datadog-custom-service-name
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /datadog-custom-service
      backendRefs:
        - name: infra-backend-v2
          port: 8080
